# RMUAST-F17

./: .gitignore  README.md
FinalProject/Drones/Extension/Bachelor/: AutoQuad.cpp
FinalProject/Drones/Extension/Release/: AutoQuad.c  Makefile  Session.c  at90can_def.h  can.c  led.c  main.c  main.elf  main.hex  uart.c  unpack_crc.c  unpack_crc.h
FinalProject/Drones/PI/: nmea_parser.py
FinalProject/Kjeld_interrupt/: avr_serial.c  avr_serial.h  main.c  scheduler.c  scheduler.h  timer.c  timer.h
FinalProject/python_telemetry/: ground_station_telemetry.py  simpel_server.py  slip_protocol.py  startup_telemetry.sh
Lection1/: utm_test.py
Lection1/nmea/: nmea.py  test.kml  test2.kml
Lecture1/: nmea_test.py
Lecture1/nmea/: nmea.py  nmea_trimble_gnss_eduquad_flight.txt
Lecture2/: plot.py
Lecture5/exercise_imu/: imu_exercise_gyro.py  imu_exercise_kalman.py  imu_exercise_noise.py  imu_exercise_pitch.py  imu_exercise_roll.py
Lecture5/exercise_imu_kalman/: imu_exercise_kalman.py
Lecture7/exercise_route_planning/: Waypoints.kml  coordinates_in_utm.txt  qgs_waypoint_generator.py  waypoint_algorithm.py  waypoints.txt
Lecture7/exercise_route_planning/aqlogreader/: coordinates_in_utm.txt  export_kml.py  exportkml.py  extract_positions.py  original.kml  test.kml
Lektion1/: README.md
mavros_lecture_ws/devel/: .catkin  .rosinstall  setup.sh
mavros_lecture_ws/src/off_board/: CMakeLists.txt
mavros_lecture_ws/src/off_board/headers/: image_converter.hpp
mavros_lecture_ws/src/off_board/src/: image_converter.cpp  off_board_node.cpp
(+536 files in other folders)
